fix overflow content of cards

--- a/join/src/app/main-content/board/board.scss
+++ b/join/src/app/main-content/board/board.scss
@@ -261,11 +261,11 @@
   cursor: move;
   position: relative;
   width: 100%;
-  height: 100%;
   max-width: 290px;
-  max-height: 260px;
-  overflow: hidden;
-  min-height: 25vh;
+  height: auto;
+  max-height: none;
+  min-height: unset;
+  overflow: visible;
 }
 
 .task_category {
@@ -467,13 +467,23 @@
     flex: none;
   }
 
+  // .example_box {
+  //   flex: 0 0 240px;
+  //   width: 240px;
+  //   max-width: 240px;
+  //   scroll-snap-align: start;
+  //   height: 220px;
+  //   max-height: 220px;
+  // }
+
   .example_box {
     flex: 0 0 240px;
     width: 240px;
     max-width: 240px;
     scroll-snap-align: start;
-    height: 220px;
-    max-height: 220px;
+    height: auto;
+    max-height: none;
+    min-height: unset;
   }
 
   .add_task_btn {
@@ -549,6 +559,7 @@
 @media (max-width: 936px) {
   .board_container {
     margin-left: 0;
+    padding-bottom: 140px;
   }
 
   .board_header_wrapper {
